--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Amor Y Algo Más | Blog",
+    "name": "Amor Y Algo Más",
     "short_name": "Amor Y Algo Más",
     "description": "Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más.",
     "background_color": "#ffffff",
